Bug 269767 - VM IMAGES panic on boot under LXC / LXD
Summary: VM IMAGES panic on boot under LXC / LXD
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL: https://github.com/freebsd/freebsd-sr...
Keywords: crash
Depends on:
Blocks:
 
Reported: 2023-02-22 21:30 UTC by Mina Galić
Modified: 2024-01-03 12:24 UTC (History)
2 users (show)

See Also:
freebsd: mfc-stable13?


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mina Galić freebsd_triage 2023-02-22 21:30:36 UTC
This is getting further than I thought it would, but still:

To detach from the console, press: <ctrl>+a q
data=0x140 data=0x1be3b8+0x440c48 syms=[0x8+0x188d78+0x8+0x1a7803]
Loading configured modules...
can't find '/boot/entropy'
can't find '/etc/hostid'

Booting [/boot/kernel/kernel]...               
staging 0x74000000 (not copying) tramp 0x7dcd9000 PT4 0x7dcd0000
Start @ 0xffffffff80385000 ...
EFI framebuffer information:
addr, size     0xc0000000, 0x3e8000
dimensions     1280 x 800
stride         1280
masks          0x00ff0000, 0x0000ff00, 0x000000ff, 0xff000000
---<<BOOT>>---
Copyright (c) 1992-2021 The FreeBSD Project.
Copyright (c) 1979, 1980, 1983, 1986, 1988, 1989, 1991, 1992, 1993, 1994
	The Regents of the University of California. All rights reserved.
FreeBSD is a registered trademark of The FreeBSD Foundation.
FreeBSD 13.1-RELEASE releng/13.1-n250148-fc952ac2212 GENERIC amd64
FreeBSD clang version 13.0.0 (git@github.com:llvm/llvm-project.git llvmorg-13.0.0-0-gd7b669b3a303)
VT(efifb): resolution 1280x800
CPU: Intel(R) Core(TM) i7-10510U CPU @ 1.80GHz (K8-class CPU)
  Origin="GenuineIntel"  Id=0x806ec  Family=0x6  Model=0x8e  Stepping=12
  Features=0x1f83fbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR,PGE,MCA,CMOV,PAT,PSE36,MMX,FXSR,SSE,SSE2,SS,HTT>
  Features2=0xfffab223<SSE3,PCLMULQDQ,VMX,SSSE3,FMA,CX16,PDCM,PCID,SSE4.1,SSE4.2,x2APIC,MOVBE,POPCNT,TSCDLT,AESNI,XSAVE,OSXSAVE,AVX,F16C,RDRAND,HV>
  AMD Features=0x2c100800<SYSCALL,NX,Page1GB,RDTSCP,LM>
  AMD Features2=0x121<LAHF,ABM,Prefetch>
  Structured Extended Features=0x9c47ab<FSGSBASE,TSCADJ,BMI1,AVX2,SMEP,BMI2,ERMS,INVPCID,MPX,RDSEED,ADX,SMAP,CLFLUSHOPT>
  Structured Extended Features2=0x4<UMIP>
  Structured Extended Features3=0xac000400<MD_CLEAR,IBPB,STIBP,ARCH_CAP,SSBD>
  XSAVE Features=0xf<XSAVEOPT,XSAVEC,XINUSE,XSAVES>
  IA32_ARCH_CAPS=0x6b<RDCL_NO,IBRS_ALL,SKIP_L1DFL_VME,MDS_NO>
  AMD Extended Feature Extensions ID EBX=0x100d000<IBPB,IBRS,STIBP,SSBD>
  VT-x: PAT,HLT,MTF,PAUSE,EPT,UG,VPID
Hypervisor: Origin = "KVMKVMKVM"
real memory  = 4294967296 (4096 MB)
avail memory = 4074909696 (3886 MB)
Event timer "LAPIC" quality 600
ACPI APIC Table: <BOCHS  BXPC    >
FreeBSD/SMP: Multiprocessor System Detected: 2 CPUs
FreeBSD/SMP: 1 package(s) x 2 core(s)
random: registering fast source Intel Secure Key RNG
random: fast provider: "Intel Secure Key RNG"
arc4random: WARNING: initial seeding bypassed the cryptographic random device because it was not yet seeded and the knob 'bypass_before_seeding' was enabled.
ioapic0 <Version 1.1> irqs 0-23
Launching APs: 1
random: entropy device external interface
kbd1 at kbdmux0
smbios0: <System Management BIOS> at iomem 0x7f91a000-0x7f91a01e
smbios0: Version: 2.8, BCD Revision: 2.8
aesni0: <AES-CBC,AES-CCM,AES-GCM,AES-ICM,AES-XTS>
acpi0: <BOCHS BXPC>
acpi0: Power Button (fixed)
cpu0: <ACPI CPU> numa-domain 0 on acpi0
atrtc0: <AT realtime clock> port 0x70-0x77 irq 8 on acpi0
atrtc0: registered as a time-of-day clock, resolution 1.000000s
Event timer "RTC" frequency 32768 Hz quality 0
hpet0: <High Precision Event Timer> iomem 0xfed00000-0xfed003ff on acpi0
Timecounter "HPET" frequency 100000000 Hz quality 950
Timecounter "ACPI-fast" frequency 3579545 Hz quality 900
acpi_timer0: <24-bit timer at 3.579545MHz> port 0x608-0x60b on acpi0
pcib0: <ACPI Host-PCI bridge> port 0xcf8-0xcff on acpi0
pci0: <ACPI PCI bus> on pcib0
pcib1: <ACPI PCI-PCI bridge> mem 0xc1a49000-0xc1a49fff irq 21 at device 1.0 on pci0
pcib1: failed to allocate initial I/O port window: 0xe000-0xefff
pci1: <ACPI PCI bus> on pcib1
virtio_pci0: <VirtIO PCI (modern) Balloon adapter> mem 0x800014000-0x800017fff irq 21 at device 0.0 on pci1
vtballoon0: <VirtIO Balloon Adapter> on virtio_pci0
virtio_pci1: <VirtIO PCI (modern) Entropy adapter> mem 0x800010000-0x800013fff irq 21 at device 0.1 on pci1
virtio_pci2: <VirtIO PCI (modern) Input adapter> mem 0xc1807000-0xc1807fff,0x80000c000-0x80000ffff irq 21 at device 0.2 on pci1
virtio_pci3: <VirtIO PCI (modern) Input adapter> mem 0xc1806000-0xc1806fff,0x800008000-0x80000bfff irq 21 at device 0.3 on pci1
virtio_pci4: <VirtIO PCI (modern) VSOCK Transport adapter> mem 0xc1805000-0xc1805fff,0x800004000-0x800007fff irq 21 at device 0.4 on pci1
virtio_pci5: <VirtIO PCI (modern) Console adapter> mem 0xc1804000-0xc1804fff,0x800000000-0x800003fff irq 21 at device 0.5 on pci1
xhci0: <XHCI (generic) USB 3.0 controller> mem 0xc1800000-0xc1803fff irq 21 at device 0.6 on pci1
xhci0: 32 bytes context size, 64-bit DMA
usbus0 on xhci0
usbus0: 5.0Gbps Super Speed USB v3.0
pcib2: <ACPI PCI-PCI bridge> mem 0xc1a48000-0xc1a48fff irq 21 at device 1.1 on pci0
pci2: <ACPI PCI bus> on pcib2
virtio_pci6: <VirtIO PCI (modern) SCSI adapter> mem 0xc1600000-0xc1600fff,0x800100000-0x800103fff irq 21 at device 0.0 on pci2
vtscsi0: <VirtIO SCSI Adapter> on virtio_pci6
pcib3: <ACPI PCI-PCI bridge> mem 0xc1a47000-0xc1a47fff irq 21 at device 1.2 on pci0
pci3: <ACPI PCI bus> on pcib3
virtio_pci7: <VirtIO PCI (modern) 9P Transport adapter> mem 0xc1401000-0xc1401fff,0x800204000-0x800207fff irq 21 at device 0.0 on pci3
virtio_pci8: <VirtIO PCI (modern) Unknown adapter> mem 0xc1400000-0xc1400fff,0x800200000-0x800203fff irq 21 at device 0.1 on pci3
pcib4: <ACPI PCI-PCI bridge> mem 0xc1a46000-0xc1a46fff irq 21 at device 1.3 on pci0
pci4: <ACPI PCI bus> on pcib4
virtio_pci9: <VirtIO PCI (modern) GPU adapter> mem 0xc0000000-0xc07fffff,0x800300000-0x800303fff,0xc0800000-0xc0800fff irq 21 at device 0.0 on pci4
pcib5: <ACPI PCI-PCI bridge> mem 0xc1a45000-0xc1a45fff irq 21 at device 1.4 on pci0
pci5: <ACPI PCI bus> on pcib5
virtio_pci10: <VirtIO PCI (modern) Network adapter> mem 0xc1200000-0xc1200fff,0x800400000-0x800403fff irq 21 at device 0.0 on pci5
vtnet0: <VirtIO Networking Adapter> on virtio_pci10
vtnet0: Ethernet address: 00:16:3e:6a:3f:33
vtnet0: netmap queues/slots: TX 2/256, RX 2/128
000.000175 [ 450] vtnet_netmap_attach       vtnet attached txq=2, txd=256 rxq=2, rxd=128
pcib6: <ACPI PCI-PCI bridge> mem 0xc1a44000-0xc1a44fff irq 21 at device 1.5 on pci0
pci6: <ACPI PCI bus> on pcib6
pcib7: <ACPI PCI-PCI bridge> mem 0xc1a43000-0xc1a43fff irq 21 at device 1.6 on pci0
pci7: <ACPI PCI bus> on pcib7
pcib8: <ACPI PCI-PCI bridge> mem 0xc1a42000-0xc1a42fff irq 21 at device 1.7 on pci0
pci8: <ACPI PCI bus> on pcib8
pcib9: <ACPI PCI-PCI bridge> mem 0xc1a41000-0xc1a41fff irq 22 at device 2.0 on pci0
pci9: <ACPI PCI bus> on pcib9
isab0: <PCI-ISA bridge> at device 31.0 on pci0
isa0: <ISA bus> on isab0
ahci0: <Intel ICH9 AHCI SATA controller> port 0xe240-0xe25f mem 0xc1a40000-0xc1a40fff irq 16 at device 31.2 on pci0
ahci0: AHCI v1.00 with 6 1.5Gbps ports, Port Multiplier not supported
ahcich0: <AHCI channel> at channel 0 on ahci0
ahcich1: <AHCI channel> at channel 1 on ahci0
ahcich2: <AHCI channel> at channel 2 on ahci0
ahcich3: <AHCI channel> at channel 3 on ahci0
ahcich4: <AHCI channel> at channel 4 on ahci0
ahcich5: <AHCI channel> at channel 5 on ahci0
acpi_syscontainer0: <System Container> on acpi0
acpi_syscontainer1: <System Container> port 0xcd8-0xce3 on acpi0
acpi_syscontainer2: <System Container> port 0x620-0x62f on acpi0
acpi_syscontainer3: <System Container> port 0xcc0-0xcd7 on acpi0
atkbdc0: <Keyboard controller (i8042)> port 0x60,0x64 irq 1 on acpi0
atkbd0: <AT Keyboard> irq 1 on atkbdc0
kbd0 at atkbd0
atkbd0: [GIANT-LOCKED]
psm0: <PS/2 Mouse> irq 12 on atkbdc0
psm0: [GIANT-LOCKED]
WARNING: Device "psm" is Giant locked and may be deleted before FreeBSD 14.0.
psm0: model IntelliMouse Explorer, device ID 4
uart0: <16550 or compatible> port 0x3f8-0x3ff irq 4 flags 0x10 on acpi0
uart0: console (9600,n,8,1)
attimer0: <AT timer> at port 0x40 on isa0
Timecounter "i8254" frequency 1193182 Hz quality 0
Event timer "i8254" frequency 1193182 Hz quality 100
attimer0: non-PNP ISA device will be removed from GENERIC in FreeBSD 14.
kernel trap 18 with interrupts disabled


Fatal trap 18: integer divide fault while in kernel mode
cpuid = 1; apic id = 07
instruction pointer	= 0x20:0xffffffff81178b0d
stack pointer	        = 0x28:0xffffffff82192f20
frame pointer	        = 0x28:0xffffffff82192f20
code segment		= base rx0, limit 0xfffff, type 0x1b
			= DPL 0, pres 1, long 1, def32 0, gran 1
processor eflags	= resume, IOPL = 0
current process		= 0 (swapper)
trap number		= 18
panic: integer divide fault
cpuid = 1
time = 1
KDB: stack backtrace:
#0 0xffffffff80c69465 at kdb_backtrace+0x65
#1 0xffffffff80c1bb1f at vpanic+0x17f
#2 0xffffffff80c1b993 at panic+0x43
#3 0xffffffff810afdf5 at trap_fatal+0x385
#4 0xffffffff81087528 at calltrap+0x8
#5 0xffffffff80bae100 at configtimer+0x320
#6 0xffffffff80bada86 at cpu_initclocks_bsp+0x7f6
#7 0xffffffff8106ce80 at cpu_initclocks+0x20
#8 0xffffffff80bacab0 at initclocks+0x20
#9 0xffffffff80ba96cf at mi_startup+0xdf
#10 0xffffffff80385022 at btext+0x22
Uptime: 1s
Error: write unix:@->/var/snap/lxd/common/lxd/logs/test-fbsd/qemu.console: file already closed
Comment 1 Mina Galić freebsd_triage 2023-02-24 01:14:12 UTC
here's a run with 14.0-CURRENT:

Loading kernel...
/boot/kernel/kernel text=0x18ea30 text=0xe2a418 text=0x6c630c data=0x180 data=0x1cbf28+0x4330d8 0x8+0x19dd60+0x8+0x1bf120\
Loading configured modules...
can't find '/etc/hostid'
can't find '/boot/entropy'

Booting [/boot/kernel/kernel]...               
staging 0x74000000 (not copying) tramp 0x7dcfe000 PT4 0x7dcf5000
Start @ 0xffffffff8038f000 ...
EFI framebuffer information:
addr, size     0xc0000000, 0x3e8000
dimensions     1280 x 800
stride         1280
masks          0x00ff0000, 0x0000ff00, 0x000000ff, 0xff000000
GDB: no debug ports present
KDB: debugger backends: ddb
KDB: current backend: ddb
---<<BOOT>>---
Copyright (c) 1992-2023 The FreeBSD Project.
Copyright (c) 1979, 1980, 1983, 1986, 1988, 1989, 1991, 1992, 1993, 1994
	The Regents of the University of California. All rights reserved.
FreeBSD is a registered trademark of The FreeBSD Foundation.
FreeBSD 14.0-CURRENT #0 main-n261074-fe5c211ba873: Thu Feb 23 08:14:23 UTC 2023
    root@releng1.nyi.freebsd.org:/usr/obj/usr/src/amd64.amd64/sys/GENERIC amd64
FreeBSD clang version 15.0.7 (https://github.com/llvm/llvm-project.git llvmorg-15.0.7-0-g8dfdcc7b7bf6)
WARNING: WITNESS option enabled, expect reduced performance.
VT(efifb): resolution 1280x800
CPU: Intel(R) Core(TM) i7-10510U CPU @ 1.80GHz (2304.08-MHz K8-class CPU)
  Origin="GenuineIntel"  Id=0x806ec  Family=0x6  Model=0x8e  Stepping=12
  Features=0x1f83fbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR,PGE,MCA,CMOV,PAT,PSE36,MMX,FXSR,SSE,SSE2,SS,HTT>
  Features2=0xfffab223<SSE3,PCLMULQDQ,VMX,SSSE3,FMA,CX16,PDCM,PCID,SSE4.1,SSE4.2,x2APIC,MOVBE,POPCNT,TSCDLT,AESNI,XSAVE,OSXSAVE,AVX,F16C,RDRAND,HV>
  AMD Features=0x2c100800<SYSCALL,NX,Page1GB,RDTSCP,LM>
  AMD Features2=0x121<LAHF,ABM,Prefetch>
  Structured Extended Features=0x9c47ab<FSGSBASE,TSCADJ,BMI1,AVX2,SMEP,BMI2,ERMS,INVPCID,MPX,RDSEED,ADX,SMAP,CLFLUSHOPT>
  Structured Extended Features2=0x4<UMIP>
  Structured Extended Features3=0xac000400<MD_CLEAR,IBPB,STIBP,ARCH_CAP,SSBD>
  XSAVE Features=0xf<XSAVEOPT,XSAVEC,XINUSE,XSAVES>
  IA32_ARCH_CAPS=0x6b<RDCL_NO,IBRS_ALL,SKIP_L1DFL_VME,MDS_NO>
  AMD Extended Feature Extensions ID EBX=0x100d000<IBPB,IBRS,STIBP,SSBD>
  VT-x: PAT,HLT,MTF,PAUSE,EPT,UG,VPID
Hypervisor: Origin = "KVMKVMKVM"
real memory  = 4294967296 (4096 MB)
avail memory = 4061016064 (3872 MB)
Event timer "LAPIC" quality 600
ACPI APIC Table: <BOCHS  BXPC    >
FreeBSD/SMP: Multiprocessor System Detected: 2 CPUs
FreeBSD/SMP: 1 package(s) x 2 core(s)
random: registering fast source Intel Secure Key RNG
random: fast provider: "Intel Secure Key RNG"
arc4random: WARNING: initial seeding bypassed the cryptographic random device because it was not yet seeded and the knob 'bypass_before_seeding' was enabled.
ioapic0 <Version 1.1> irqs 0-23
Launching APs: 1
random: entropy device external interface
kbd1 at kbdmux0
smbios0: <System Management BIOS> at iomem 0x7f91a000-0x7f91a01e
smbios0: Version: 2.8, BCD Revision: 2.8
aesni0: <AES-CBC,AES-CCM,AES-GCM,AES-ICM,AES-XTS>
acpi0: <BOCHS BXPC>
acpi0: Power Button (fixed)
cpu0: <ACPI CPU> numa-domain 0 on acpi0
atrtc0: <AT realtime clock> port 0x70-0x77 irq 8 on acpi0
atrtc0: registered as a time-of-day clock, resolution 1.000000s
Event timer "RTC" frequency 32768 Hz quality 0
hpet0: <High Precision Event Timer> iomem 0xfed00000-0xfed003ff on acpi0
Timecounter "HPET" frequency 100000000 Hz quality 950
Timecounter "ACPI-fast" frequency 3579545 Hz quality 900
acpi_timer0: <24-bit timer at 3.579545MHz> port 0x608-0x60b on acpi0
pcib0: <ACPI Host-PCI bridge> port 0xcf8-0xcff on acpi0
pci0: <ACPI PCI bus> on pcib0
pcib1: <ACPI PCI-PCI bridge> mem 0xc1a49000-0xc1a49fff irq 21 at device 1.0 on pci0
pcib1: failed to allocate initial I/O port window: 0xe000-0xefff
pci1: <ACPI PCI bus> on pcib1
virtio_pci0: <VirtIO PCI (modern) Balloon adapter> mem 0x800014000-0x800017fff irq 21 at device 0.0 on pci1
vtballoon0: <VirtIO Balloon Adapter> on virtio_pci0
virtio_pci1: <VirtIO PCI (modern) Entropy adapter> mem 0x800010000-0x800013fff irq 21 at device 0.1 on pci1
virtio_pci2: <VirtIO PCI (modern) Input adapter> mem 0xc1807000-0xc1807fff,0x80000c000-0x80000ffff irq 21 at device 0.2 on pci1
virtio_pci3: <VirtIO PCI (modern) Input adapter> mem 0xc1806000-0xc1806fff,0x800008000-0x80000bfff irq 21 at device 0.3 on pci1
virtio_pci4: <VirtIO PCI (modern) VSOCK Transport adapter> mem 0xc1805000-0xc1805fff,0x800004000-0x800007fff irq 21 at device 0.4 on pci1
virtio_pci5: <VirtIO PCI (modern) Console adapter> mem 0xc1804000-0xc1804fff,0x800000000-0x800003fff irq 21 at device 0.5 on pci1
xhci0: <XHCI (generic) USB 3.0 controller> mem 0xc1800000-0xc1803fff irq 21 at device 0.6 on pci1
xhci0: 32 bytes context size, 64-bit DMA
usbus0 on xhci0
usbus0: 5.0Gbps Super Speed USB v3.0
pcib2: <ACPI PCI-PCI bridge> mem 0xc1a48000-0xc1a48fff irq 21 at device 1.1 on pci0
pci2: <ACPI PCI bus> on pcib2
virtio_pci6: <VirtIO PCI (modern) SCSI adapter> mem 0xc1600000-0xc1600fff,0x800100000-0x800103fff irq 21 at device 0.0 on pci2
vtscsi0: <VirtIO SCSI Adapter> on virtio_pci6
pcib3: <ACPI PCI-PCI bridge> mem 0xc1a47000-0xc1a47fff irq 21 at device 1.2 on pci0
pci3: <ACPI PCI bus> on pcib3
virtio_pci7: <VirtIO PCI (modern) 9P Transport adapter> mem 0xc1401000-0xc1401fff,0x800204000-0x800207fff irq 21 at device 0.0 on pci3
virtio_pci8: <VirtIO PCI (modern) Unknown adapter> mem 0xc1400000-0xc1400fff,0x800200000-0x800203fff irq 21 at device 0.1 on pci3
pcib4: <ACPI PCI-PCI bridge> mem 0xc1a46000-0xc1a46fff irq 21 at device 1.3 on pci0
pci4: <ACPI PCI bus> on pcib4
virtio_pci9: <VirtIO PCI (modern) GPU adapter> mem 0xc0000000-0xc07fffff,0x800300000-0x800303fff,0xc0800000-0xc0800fff irq 21 at device 0.0 on pci4
pcib5: <ACPI PCI-PCI bridge> mem 0xc1a45000-0xc1a45fff irq 21 at device 1.4 on pci0
pci5: <ACPI PCI bus> on pcib5
virtio_pci10: <VirtIO PCI (modern) Network adapter> mem 0xc1200000-0xc1200fff,0x800400000-0x800403fff irq 21 at device 0.0 on pci5
vtnet0: <VirtIO Networking Adapter> on virtio_pci10
vtnet0: Ethernet address: 00:16:3e:b7:ea:cb
vtnet0: netmap queues/slots: TX 2/256, RX 2/128
000.000093 [ 453] vtnet_netmap_attach       vtnet attached txq=2, txd=256 rxq=2, rxd=128
pcib6: <ACPI PCI-PCI bridge> mem 0xc1a44000-0xc1a44fff irq 21 at device 1.5 on pci0
pci6: <ACPI PCI bus> on pcib6
pcib7: <ACPI PCI-PCI bridge> mem 0xc1a43000-0xc1a43fff irq 21 at device 1.6 on pci0
pci7: <ACPI PCI bus> on pcib7
pcib8: <ACPI PCI-PCI bridge> mem 0xc1a42000-0xc1a42fff irq 21 at device 1.7 on pci0
pci8: <ACPI PCI bus> on pcib8
pcib9: <ACPI PCI-PCI bridge> mem 0xc1a41000-0xc1a41fff irq 22 at device 2.0 on pci0
pci9: <ACPI PCI bus> on pcib9
isab0: <PCI-ISA bridge> at device 31.0 on pci0
isa0: <ISA bus> on isab0
ahci0: <Intel ICH9 AHCI SATA controller> port 0xe240-0xe25f mem 0xc1a40000-0xc1a40fff irq 16 at device 31.2 on pci0
ahci0: AHCI v1.00 with 6 1.5Gbps ports, Port Multiplier not supported
ahcich0: <AHCI channel> at channel 0 on ahci0
ahcich1: <AHCI channel> at channel 1 on ahci0
ahcich2: <AHCI channel> at channel 2 on ahci0
ahcich3: <AHCI channel> at channel 3 on ahci0
ahcich4: <AHCI channel> at channel 4 on ahci0
ahcich5: <AHCI channel> at channel 5 on ahci0
acpi_syscontainer0: <System Container> on acpi0
acpi_syscontainer1: <System Container> port 0xcd8-0xce3 on acpi0
acpi_syscontainer2: <System Container> port 0x620-0x62f on acpi0
acpi_syscontainer3: <System Container> port 0xcc0-0xcd7 on acpi0
atkbdc0: <Keyboard controller (i8042)> port 0x60,0x64 irq 1 on acpi0
atkbd0: <AT Keyboard> irq 1 on atkbdc0
kbd0 at atkbd0
atkbd0: [GIANT-LOCKED]
psm0: <PS/2 Mouse> irq 12 on atkbdc0
psm0: [GIANT-LOCKED]
WARNING: Device "psm" is Giant locked and may be deleted before FreeBSD 14.0.
psm0: model IntelliMouse Explorer, device ID 4
uart0: <16550 or compatible> port 0x3f8-0x3ff irq 4 flags 0x10 on acpi0
uart0: console (9600,n,8,1)
attimer0: <AT timer> at port 0x40 on isa0
Timecounter "i8254" frequency 1193182 Hz quality 0
Event timer "i8254" frequency 1193182 Hz quality 100
attimer0: non-PNP ISA device will be removed from GENERIC in FreeBSD 14.
kernel trap 18 with interrupts disabled


Fatal trap 18: integer divide fault while in kernel mode
cpuid = 1; apic id = 07
instruction pointer	= 0x20:0xffffffff811aa6f5
stack pointer	        = 0x28:0xffffffff825bbef0
frame pointer	        = 0x28:0xffffffff825bbef0
code segment		= base rx0, limit 0xfffff, type 0x1b
			= DPL 0, pres 1, long 1, def32 0, gran 1
processor eflags	= resume, IOPL = 0
current process		= 0 (swapper)
rdi: ffffffff81fec128 rsi:           a3d70a rdx:                0
rcx:                0  r8:             1730  r9: fffffe000b1bd000
rax:        200000000 rbx:                2 rbp: ffffffff825bbef0
r10: fffffe000b1be770 r11:                4 r12:        1000852b4
r13:        100ac29be r14:                1 r15: ffffffff81e82d80
trap number		= 18
panic: integer divide fault
cpuid = 1
time = 1
KDB: stack backtrace:
db_trace_self_wrapper() at db_trace_self_wrapper+0x2b/frame 0xffffffff825bbd10
vpanic() at vpanic+0x152/frame 0xffffffff825bbd60
panic() at panic+0x43/frame 0xffffffff825bbdc0
trap_fatal() at trap_fatal+0x409/frame 0xffffffff825bbe20
calltrap() at calltrap+0x8/frame 0xffffffff825bbe20
--- trap 0x12, rip = 0xffffffff811aa6f5, rsp = 0xffffffff825bbef0, rbp = 0xffffffff825bbef0 ---
lapic_et_start() at lapic_et_start+0x2e5/frame 0xffffffff825bbef0
configtimer() at configtimer+0x32f/frame 0xffffffff825bbf40
cpu_initclocks_bsp() at cpu_initclocks_bsp+0x71a/frame 0xffffffff825bbf70
cpu_initclocks() at cpu_initclocks+0x1f/frame 0xffffffff825bbf90
initclocks() at initclocks+0x20/frame 0xffffffff825bbfa0
mi_startup() at mi_startup+0x1e8/frame 0xffffffff825bbff0
btext() at btext+0x23
KDB: enter: panic
[ thread pid 0 tid 100000 ]
Stopped at      kdb_enter+0x32: movq    $0,0x1293d53(%rip)
db>
Comment 2 dwmw2 2023-02-24 09:48:27 UTC
Looks like a divide by a zero because et->et_frequency is zero in lapic_change_mode() at 
https://github.com/freebsd/freebsd-src/blob/main/sys/x86/x86/local_apic.c#L1020

What are you putting in CPUID leaf 0x40000010? See lapic_calibrate_initcount_cpuid_vm() at 
 https://github.com/freebsd/freebsd-src/blob/main/sys/x86/x86/local_apic.c#L931
Comment 3 Mina Galić freebsd_triage 2023-02-25 09:14:01 UTC
apparently, sudo make -C release WITH_VMIMAGES=YES NOPORTS=YES vm-image

does not produce an image i can use. I might need some help here:

BdsDxe: failed to load Boot0001 "UEFI QEMU QEMU HARDDISK " from PciRoot(0x0)/Pci(0x1,0x1)/Pci(0x0,0x0)/Scsi(0x0,0x1): Not Found

>>Start PXE over IPv4.
Comment 4 Mina Galić freebsd_triage 2023-02-25 10:43:42 UTC
so, built, and can confirm that the fix: https://github.com/freebsd/freebsd-src/pull/664 now works and allows FreeBSD to boot on LXD based qemu profile
Comment 5 Graham Perrin freebsd_committer freebsd_triage 2023-02-25 16:15:54 UTC
Triage: removal of a deprecated keyword.
Comment 6 commit-hook freebsd_committer freebsd_triage 2023-02-25 16:54:01 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=499171a98c8813e4dc6e085461d5c47750efa555

commit 499171a98c8813e4dc6e085461d5c47750efa555
Author:     Mina Galić <freebsd@igalic.co>
AuthorDate: 2023-02-24 11:07:42 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2023-02-25 16:47:40 +0000

    apic: prevent divide by zero in CPU frequency init

    If a CPU for some reason returns 0 as CPU frequency, we currently panic
    on the resulting divide by zero when trying to initialize the CPU(s) via
    APIC. When this happens, we'll fallback to measuring the frequency
    instead.

    PR: 269767
    Reviewed by: imp
    Pull Request: https://github.com/freebsd/freebsd-src/pull/664

 sys/x86/x86/local_apic.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 7 commit-hook freebsd_committer freebsd_triage 2023-02-28 03:01:12 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=a1c63b8e29e832d9ada7c252e7e80ce8b94aeb41

commit a1c63b8e29e832d9ada7c252e7e80ce8b94aeb41
Author:     Mina Galić <freebsd@igalic.co>
AuthorDate: 2023-02-28 02:58:45 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2023-02-28 02:58:45 +0000

    apic: prevent divide by zero in CPU frequency init

    If a CPU for some reason returns 0 as CPU frequency, we currently panic
    on the resulting divide by zero when trying to initialize the CPU(s) via
    APIC. When this happens, we'll fallback to measuring the frequency
    instead.

    PR: 269767
    Reviewed by: imp
    Pull Request: https://github.com/freebsd/freebsd-src/pull/664

    (cherry picked from commit 499171a98c8813e4dc6e085461d5c47750efa555)

 sys/x86/x86/local_apic.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 8 commit-hook freebsd_committer freebsd_triage 2023-03-02 17:10:46 UTC
A commit in branch releng/13.2 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=55639067a29b1250f7ba7dfc012723a843c5f91c

commit 55639067a29b1250f7ba7dfc012723a843c5f91c
Author:     Mina Galić <freebsd@igalic.co>
AuthorDate: 2023-02-28 02:58:45 +0000
Commit:     Warner Losh <imp@FreeBSD.org>
CommitDate: 2023-03-02 17:09:47 +0000

    apic: prevent divide by zero in CPU frequency init

    If a CPU for some reason returns 0 as CPU frequency, we currently panic
    on the resulting divide by zero when trying to initialize the CPU(s) via
    APIC. When this happens, we'll fallback to measuring the frequency
    instead.

    PR: 269767
    Reviewed by: imp
    Pull Request: https://github.com/freebsd/freebsd-src/pull/664
    Approved by: re@ (cperciva)

    (cherry picked from commit 499171a98c8813e4dc6e085461d5c47750efa555)
    (cherry picked from commit a1c63b8e29e832d9ada7c252e7e80ce8b94aeb41)

 sys/x86/x86/local_apic.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)